--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-constants": "~13.1.1",
     "expo-mail-composer": "~11.2.0",
     "expo-status-bar": "~1.3.0",
+    "intl": "^1.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
