--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
-    "test": "jest"
+    "start": "nodemon src/server.js",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "keywords": [],
   "author": "",
@@ -13,12 +13,14 @@
   "dependencies": {
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.18.1",
-    "jest": "^28.1.2",
     "knex": "^2.1.0",
     "sqlite3": "^5.0.8"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "jest": "^28.1.2",
+    "nodemon": "^2.0.16",
+    "supertest": "^6.2.4"
   }
 }
